2004-08-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/command.c: Remove unused prototype.
	
2004-08-08  Ethan Merritt  <merritt@u.washington.edu>

	* src/util.c src/util.h: New routine try_to_get_string() that combines 
	isstring() and m_quote_capture(). The intent is to switch call sites
	over to using this new routine, and then extend it to handle string
	variables as well as quoted inline string constants.

	* src/contour.h: Revised declaration of contour_format[].

	* src/set.c src/command.c: Begin wholesale replacement of isstring()
	and m_quote_capture/quote_string with new routine try_to_get_string().

2004-08-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_print set_output):  Do not chop whitespace from the
	front of input string; it causes a segfault when the string is freed.
	If we really need to strip whitespace from filenames, it should be done
	in a routine shared by all callers.

2004-08-06  Ethan Merritt  <merritt@u.washington.edu>

	* term/graphics.c (place_arrows): Restore default text color after
	drawing all the arrows. Fixes bug #1004765.

2004-08-02  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm src/term.h configure.in src/show.c (show_version):
	GIF support is back in libgd as of version 2.0.28 (July 2004).
	At last we can use the same driver for png, gif, and jpeg.

	* term/gif.trm term/png.trm:  Remove these old drivers.

	* src/makefile.all docs/Makefile.in: And remove them as make targets.

	* src/command.h src/command.c (load_command): Remove macro that was
	used in only one place; clean up code order as prep for applying
	string variable patches.

2004-08-01  Ethan Merritt  <merritt@u.washington.edu>
            Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm: Introduce a boolean value PSLevel2 into the PostScript
	prolog, and use it to determine whether pattern-fill is defined using
	PostScript Level 2 primitives or via a Level 1 solid fill. Introduce a