@@ -1,6 +1,9 @@
 2004-08-09  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/command.c: Remove unused prototype.
+
+	* src/getcolor.c: Conditionally remove unused prototype during 
+	compilation of gnuplot_x11.
 	
 2004-08-08  Ethan Merritt  <merritt@u.washington.edu>
 
